tests/language_modules/12_type_conflicts/valid/alias_assignment.vf
module AliasAssignment

type Count is Integer range 0..100

procedure main()
is
    let total: Count = 1
    total := 2
end main

end AliasAssignment