tests/language_modules/12_type_conflicts/invalid_semantics/parameter_alias_mismatch.vf
module ParameterAliasMismatch

type Count is Integer range 0..100

procedure accept(value: Count)
is
    check true
end accept

procedure main()
is
    call accept(true)
end main

end ParameterAliasMismatch